# OpenCV

./: .gitignore
01_core/00_hello/: CMakeLists.txt  hello.cpp
01_core/01_container/: CMakeLists.txt
01_core/02_scan/: CMakeLists.txt
01_core/03_mask/: CMakeLists.txt  mask.cpp
01_core/05_blend/: CMakeLists.txt  blend.cpp
01_core/06_transform/: BasicLinearTransforms.cpp  CMakeLists.txt
01_core/07_fft/: CMakeLists.txt  discrete_fourier_transform.cpp
01_core/08_file/: CMakeLists.txt
01_core/09_parallel/: CMakeLists.txt  how_to_use_OpenCV_parallel_for_new.cpp
01_core/10_univ_intrin/: CMakeLists.txt  univ_intrin.cpp
02_imgproc/01_drawing/: CMakeLists.txt  Drawing_1.cpp
02_imgproc/02_random/: CMakeLists.txt  Drawing_2.cpp
02_imgproc/03_smoothing/: CMakeLists.txt
02_imgproc/04_morphology1/: CMakeLists.txt
02_imgproc/05_morphology2/: CMakeLists.txt
02_imgproc/06_hitmiss/: CMakeLists.txt
02_imgproc/07_morphology3/: CMakeLists.txt
02_imgproc/08_pyramids/: CMakeLists.txt
02_imgproc/09_threshold/: CMakeLists.txt  Threshold.cpp
02_imgproc/10_threshold_inRange/: CMakeLists.txt
02_imgproc/11_filter2DDemo/: filter2D_demo.cpp
02_imgproc/11_filter2D_demo/: CMakeLists.txt
02_imgproc/12_copyMakeBorder/: CMakeLists.txt  copyMakeBorder_demo.cpp
02_imgproc/13_sobel/: CMakeLists.txt  (+1 more)
02_imgproc/24_backProjection/: CMakeLists.txt
02_imgproc/28_generalContour/: CMakeLists.txt  generalContours_demo1_local.cpp  generalContours_demo1mod.cpp
02_imgproc/28_generalContour/.cache/clangd/index/: generalContours_demo1_local.cpp.BDBAA2A6613468C9.idx
(+35 files in other folders)
